# malloc-k2-edgecache

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md
config/: default.toml
docs/: federator-architecture.md  index.html
federator/: .gitignore  package-lock.json  package.json  tsconfig.json  wrangler.toml
federator/dashboard/: index.html  package-lock.json  package.json
federator/dashboard/src/: App.tsx  main.tsx  types.ts
federator/dashboard/src/components/: BucketList.tsx  EventLog.tsx  NodeList.tsx  StatsPanel.tsx  StatusBadge.tsx  Terminal.tsx  TitleBar.tsx
federator/dashboard/src/hooks/: useApi.ts
federator/dashboard/src/styles/: terminal.css
federator/src/: federator.ts  index.ts  protocol.ts
src/: config.rs  lib.rs  main.rs
src/api/: handlers.rs  mod.rs  routes.rs
src/auth/: aws_sigv4.rs  mod.rs
src/cache/: cache_key.rs  disk_cache.rs  memory_cache.rs  mod.rs
src/federator/: connection.rs  handler.rs  health.rs  mod.rs  protocol.rs  route_cache.rs
src/metrics/: mod.rs
src/multipart/: mod.rs
src/proxy/: mod.rs  s3_proxy.rs
src/writeback/: mod.rs
